# vlasov-poisson

./: CMakeLists.txt  README.md  Untitled16.ipynb
.github/workflows/: workflow.yml
.tekton/: clusterrole.yaml  clusterrolebinding.yaml  pipeline-sa.yaml
examples/: Results.ipynb
performance/: ncu_blocksize_analysis.py  plot.py
src/: CMakeLists.txt  IO.cpp  IO.h  MxE.cu  MxE.cuh  constants.cpp  constants.hpp  field_container.cuh  initialization.cu  initialization.cuh  main.cpp  moments.cu  moments.cuh  particle_container.cuh  pdf_simple.cuh  pdfs.cuh  solver.cu  solver.cuh  sorting.cu  sorting.cuh  vlasov_constants.hpp  vlasov_poisson.cu  vlasov_poisson.cuh  vlasov_poisson_pi.cu  vlasov_poisson_pi.cuh
src/Constants/: constants.cpp  constants.hpp
src/Containers/: field_container.cuh  particle_container.cu  particle_container.cuh
src/Depositors/: BruteDepositor.cu  BruteDepositor.h  DepositorBase.h  SortedDepositor.cu  SortedDepositor.h  TiledDepositor.cu  TiledDepositor.h  moments.cu  moments.cuh
src/Distributions/: pdf_templates.cuh  pdfs.cuh
src/IOs/: IO.cpp  IO.h
src/Initializations/: initialization.cuh
src/Models/: vlasov_poisson.cu  vlasov_poisson.cuh
src/Solvers/: solver.cu  solver.cuh
src/Sorters/: sorting.cu  sorting.cuh
src/VRs/: MxE.cu  MxE.cuh
test_cuda_kernels/: poisson_fft_solver.cu
